--- a/samples/nim/Makefile.in
+++ b/samples/nim/Makefile.in
@@ -105,5 +105,6 @@ re-makemake-m:
 	opp_makemake -f -m    #recreate Makefile.in
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-
-players.o: players.h
+game.o: game.cc
+players.o: players.cc \
+  players.h
