--- a/samples/pvmex/Makefile.in
+++ b/samples/pvmex/Makefile.in
@@ -102,3 +102,4 @@ re-makemake-m:
 	opp_makemake -f -m    #recreate Makefile.in
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
+simples.o: simples.cc
