--- a/samples/hist/Makefile.in
+++ b/samples/hist/Makefile.in
@@ -102,3 +102,4 @@ re-makemake-m:
 	opp_makemake -f -m    #recreate Makefile.in
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
+hist.o: hist.cc
