--- a/samples/token/Makefile.in
+++ b/samples/token/Makefile.in
@@ -108,5 +108,5 @@ re-makemake-m:
 	opp_makemake -f -m    #recreate Makefile.in
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-
-token.o: token.h
+token.o: token.cc \
+  token.h
