transfusion from my local cvs. still tons of FIXMEs in the code, but some generated _n.cc files already compile

--- a/src/nedxml/Makefile.in
+++ b/src/nedxml/Makefile.in
@@ -30,8 +30,8 @@ COPTS=$(CPPFLAGS) $(CFLAGS) -I$(OMNETPP_INCL_DIR) -I.  -DBUILDING_SIM
 OBJS= nedelements.o nedelement.o nedstring.o nederror.o \
      nedvalidator.o neddtdvalidator.o neddtdvalidator1.o \
      nedbasicvalidator.o nedsemanticvalidator.o nedcompiler.o \
-     cppgenerator.o nedgenerator.o nedfilebuffer.o \
-     nedparser.o ned.tab.o lex.yy.o \
+     cppgenerator.o cppexprgenerator.o nedgenerator.o nedfilebuffer.o \
+     nedparser.o ned.tab.o lex.yy.o nedutil.o \
      xmlgenerator.o nedxmlparser.o nedsaxhandler.o saxparser.o
 
 
@@ -56,6 +56,9 @@ nedelements.cc nedelements.h nedvalidator.cc nedvalidator.h : dtdclassgen.pl ned
 
 cppgenerator.o : cppgenerator.cc
 	$(CXX) -c $(COPTS) cppgenerator.cc
+
+cppexprgenerator.o : cppexprgenerator.cc
+	$(CXX) -c $(COPTS) cppexprgenerator.cc
 
 nedelements.o : nedelements.cc
 	$(CXX) -c $(COPTS) nedelements.cc
@@ -123,6 +126,9 @@ nedsaxhandler.o : nedsaxhandler.cc
 saxparser.o : saxparser.cc
 	$(CXX) -c $(COPTS) saxparser.cc
 
+nedutil.o : nedutil.cc
+	$(CXX) -c $(COPTS) nedutil.cc
+
 depend:
 	$(MAKEDEPEND) -I../../include -- *.cc 
 	$(MAKEDEPEND) -I../../include -fMakefile.in -- *.cc 
@@ -133,3 +139,103 @@ clean:
 #	rm -f nedelements.cc nedelements.h nedvalidator.cc nedvalidator.h
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
+cppgenerator.o: cppgenerator.cc \
+  nedelements.h \
+  cppgenerator.h \
+  nedelement.h \
+  nedstring.h
+nedbasicvalidator.o: nedbasicvalidator.cc \
+  nederror.h \
+  nedbasicvalidator.h \
+  nedelement.h \
+  nedstring.h \
+  nedvalidator.h \
+  nedelements.h
+nedcompiler.o: nedcompiler.cc \
+  nederror.h \
+  nedcompiler.h \
+  nedparser.h \
+  neddtdvalidator.h \
+  nedbasicvalidator.h \
+  nedsemanticvalidator.h \
+  nedelement.h \
+  nedstring.h \
+  nedelements.h \
+  nedgrammar.h \
+  nedvalidator.h
+neddtdvalidator.o: neddtdvalidator.cc \
+  neddtdvalidator.h \
+  nedelements.h \
+  nedvalidator.h \
+  nedelement.h \
+  nedstring.h
+neddtdvalidator1.o: neddtdvalidator1.cc \
+  nederror.h \
+  neddtdvalidator.h \
+  nedelement.h \
+  nedstring.h \
+  nedelements.h \
+  nedvalidator.h
+nedelement.o: nedelement.cc \
+  nedelement.h \
+  nedstring.h
+nedelements.o: nedelements.cc \
+  nedelements.h \
+  nedelement.h \
+  nedstring.h
+nederror.o: nederror.cc \
+  nederror.h \
+  nedelement.h \
+  nedstring.h
+nedfilebuffer.o: nedfilebuffer.cc \
+  nedfilebuffer.h \
+  nedparser.h \
+  nedgrammar.h \
+  nedelement.h \
+  nedstring.h
+nedgenerator.o: nedgenerator.cc \
+  nedgenerator.h \
+  nedelements.h \
+  nedelement.h \
+  nedstring.h
+nedparser.o: nedparser.cc \
+  nedparser.h \
+  nedfilebuffer.h \
+  nedelements.h \
+  nederror.h \
+  nedgrammar.h \
+  nedelement.h \
+  nedstring.h
+nedsaxhandler.o: nedsaxhandler.cc \
+  nedsaxhandler.h \
+  nedelements.h \
+  nedelement.h \
+  saxparser.h \
+  nedstring.h
+nedsemanticvalidator.o: nedsemanticvalidator.cc \
+  nederror.h \
+  nedsemanticvalidator.h \
+  nedcompiler.h \
+  nedelement.h \
+  nedstring.h \
+  nedvalidator.h \
+  nedelements.h
+nedstring.o: nedstring.cc \
+  nedstring.h
+nedvalidator.o: nedvalidator.cc \
+  nedvalidator.h \
+  nedelements.h \
+  nedelement.h \
+  nedstring.h
+nedxmlparser.o: nedxmlparser.cc \
+  saxparser.h \
+  nedsaxhandler.h \
+  nedelement.h \
+  nedstring.h
+saxparser.o: saxparser.cc \
+  saxparser.h
+xmlgenerator.o: xmlgenerator.cc \
+  nedelements.h \
+  xmlgenerator.h \
+  nedelement.h \
+  nedstring.h
