--- a/src/nedxml/Makefile.vc
+++ b/src/nedxml/Makefile.vc
@@ -10,12 +10,12 @@ CFLAGS=$(CFLAGS) /DWIN32_DLL
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) $(EXPAT_CFLAGS)
-OBJS=nedelements.obj nedelement.obj nedstring.obj nederror.obj \
+COPTS=$(CFLAGS)  $(EXPAT_CFLAGS)
+OBJS=nedelements.obj nedelement.obj nederror.obj \
      nedvalidator.obj neddtdvalidator.obj neddtdvalidator1.obj \
      nedbasicvalidator.obj nedsemanticvalidator.obj nedcompiler.obj \
-     cppgenerator.obj cppexprgenerator.obj nedgenerator.obj nedfilebuffer.obj \
-     nedparser.obj ned.tab.obj lex.yy.obj nedutil.obj \
+     cppgenerator.obj cppmsggenerator.obj cppexprgenerator.obj nedgenerator.obj \
+     nedfilebuffer.obj nedparser.obj ned.tab.obj lex.yy.obj nedutil.obj \
      xmlgenerator.obj nedxmlparser.obj nedsaxhandler.obj saxparser.obj \
 
 
@@ -33,6 +33,9 @@ nedelements.cc nedelements.h nedvalidator.cc nedvalidator.h : dtdclassgen.pl ned
 
 cppgenerator.obj : cppgenerator.cc
         $(CXX) $(COPTS) /c /Tp cppgenerator.cc
+
+cppmsggenerator.obj : cppmsggenerator.cc
+        $(CXX) $(COPTS) /c /Tp cppmsggenerator.cc
 
 cppexprgenerator.obj : cppexprgenerator.cc
         $(CXX) $(COPTS) /c /Tp cppexprgenerator.cc
@@ -60,9 +63,6 @@ nedbasicvalidator.obj : nedbasicvalidator.cc
 
 nedsemanticvalidator.obj : nedsemanticvalidator.cc
         $(CXX) $(COPTS) /c /Tp nedsemanticvalidator.cc
-
-nedstring.obj : nedstring.cc
-        $(CXX) $(COPTS) /c /Tp nedstring.cc
 
 nederror.obj : nederror.cc
 	$(CXX) $(COPTS) /c /Tp nederror.cc
@@ -121,19 +121,19 @@ cppexprgenerator.obj: cppexprgenerator.cc \
   nederror.h \
   nedelements.h \
   nedelement.h \
-  nedstring.h
+
 cppgenerator.obj: cppgenerator.cc \
   nedelements.h \
   cppgenerator.h \
   nederror.h \
   nedelement.h \
-  nedstring.h \
+   \
   cppexprgenerator.h
 nedbasicvalidator.obj: nedbasicvalidator.cc \
   nederror.h \
   nedbasicvalidator.h \
   nedelement.h \
-  nedstring.h \
+   \
   nedvalidator.h \
   nedelements.h
 nedcompiler.obj: nedcompiler.cc \
@@ -144,50 +144,48 @@ nedcompiler.obj: nedcompiler.cc \
   nedbasicvalidator.h \
   nedsemanticvalidator.h \
   nedelement.h \
-  nedstring.h \
+   \
   nedelements.h \
   nedgrammar.h \
   nedvalidator.h
 neddtdvalidator.obj: neddtdvalidator.cc \
   nederror.h \
   neddtdvalidator.h \
-  nedelements.h \
-  nedvalidator.h \
   nedelement.h \
-  nedstring.h \
+   \
   nedelements.h \
   nedvalidator.h
 neddtdvalidator1.obj: neddtdvalidator1.cc \
   nederror.h \
   neddtdvalidator.h \
   nedelement.h \
-  nedstring.h \
+   \
   nedelements.h \
   nedvalidator.h
 nedelement.obj: nedelement.cc \
   nedelement.h \
-  nedstring.h
+
 nedelements.obj: nedelements.cc \
   nederror.h \
   nedelements.h \
   nedelement.h \
-  nedstring.h
+
 nederror.obj: nederror.cc \
   nederror.h \
   nedelement.h \
-  nedstring.h
+
 nedfilebuffer.obj: nedfilebuffer.cc \
   nedfilebuffer.h \
   nedparser.h \
   nedgrammar.h \
   nedelement.h \
-  nedstring.h
+
 nedgenerator.obj: nedgenerator.cc \
   nedgenerator.h \
   nederror.h \
   nedelements.h \
   nedelement.h \
-  nedstring.h
+
 nedparser.obj: nedparser.cc \
   nedparser.h \
   nedfilebuffer.h \
@@ -195,45 +193,44 @@ nedparser.obj: nedparser.cc \
   nederror.h \
   nedgrammar.h \
   nedelement.h \
-  nedstring.h
+
 nedsaxhandler.obj: nedsaxhandler.cc \
   nedsaxhandler.h \
   nedelements.h \
   nedelement.h \
   saxparser.h \
-  nedstring.h
+
 nedsemanticvalidator.obj: nedsemanticvalidator.cc \
   nederror.h \
   nedsemanticvalidator.h \
   nedcompiler.h \
   nedelement.h \
-  nedstring.h \
+   \
   nedvalidator.h \
   nedelements.h
 nedstring.obj: nedstring.cc \
-  nedstring.h
+
 nedutil.obj: nedutil.cc \
   nederror.h \
   nedutil.h \
   nedelement.h \
-  nedstring.h
+
 nedvalidator.obj: nedvalidator.cc \
   nederror.h \
   nedvalidator.h \
-  nedelements.h \
   nedelement.h \
-  nedstring.h \
+   \
   nedelements.h
 nedxmlparser.obj: nedxmlparser.cc \
   saxparser.h \
   nedsaxhandler.h \
   nederror.h \
   nedelement.h \
-  nedstring.h
+
 saxparser.obj: saxparser.cc \
   saxparser.h
 xmlgenerator.obj: xmlgenerator.cc \
   nedelements.h \
   xmlgenerator.h \
   nedelement.h \
-  nedstring.h
+
