--- a/src/sim/Makefile.vc
+++ b/src/sim/Makefile.vc
@@ -15,7 +15,7 @@ CPPOBJS= task.obj ccoroutine.obj ctypes.obj carray.obj cgate.obj cmodule.obj csi
 	 cstat.obj chist.obj cdensity.obj cvarhist.obj cpsquare.obj cksplit.obj \
          cmessage.obj cdetect.obj cstk.obj util.obj cllist.obj ctopo.obj errmsg.obj \
 	 cmsgheap.obj cnetmod.obj coutvect.obj cqueue.obj chead.obj cwatch.obj \
-         cpacket.obj cfsm.obj cstruct.obj cenum.obj cexception.obj cdispstr.obj
+         cpacket.obj cfsm.obj cstruct.obj cchannel.obj cenum.obj cexception.obj cdispstr.obj
 CPPOBJS_STD= std\netpack.obj
 CPPOBJS_PVM= pvm\pvmmod.obj pvm/pvmpack.obj
 CPPOBJS_MPI= mpi\mpimod.obj mpi/mpipack.obj
@@ -135,6 +135,9 @@ cstk.obj : cstk.cc
 
 cstruct.obj: cstruct.cc
 	$(CXX) $(COPTS) /c /Tp cstruct.cc
+
+cchannel.obj: cchannel.cc
+	$(CXX) $(COPTS) /c /Tp cchannel.cc
 
 cdispstr.obj: cdispstr.cc
 	$(CXX) $(COPTS) /c /Tp cdispstr.cc
